Fix: mobile screen overflow due to address bar

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
-
 #content {
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
